...
  const { lat, long } = coords;
  const apiKey = process.env.EXPO_PUBLIC_GOOGLE_PLACES_API_KEY;
  try {
    const url = `https://maps.googleapis.com/maps/api/geocode/json?latlng=${lat},${long}&key=${apiKey}&result_type=locality`;
    const { results, status } = await fetch(url).then((res) => res.json());
    if (
      status !== "OK" ||
      !results ||
      results.length < 1 ||
      !results[0].formatted_address
    ) {
      throw new Error(
        `Reverse geocoding failed. Status: ${status}, results: ${JSON.stringify(results)}`,
...
