...
        header: ({ options }) => <Header title={options.title} />,
      }}
    >
      <Tabs.Screen
        name="mementos"
        options={{
          title: "Mementos",
          tabBarIcon: ({ color, size }) => (
            <BookHeart size={size} color={color || primaryColor} />
          ),
        }}
      />
      <Tabs.Screen
...
