...
            ref={(ref) => setCameraRef(ref)}
            ratio="4:3"
          />
          {/* Rectangle reference overlay */}
          <View className="absolute inset-0 justify-center items-center z-50">
            <RectangleVerticalIcon
              testID="camera-reference-overlay"
              size={height * 0.7}
              strokeWidth={0.1}
              color="#DADADA"
            />
          </View>
          <View className="absolute bottom-0 left-0 right-0 z-20">
...
              {/* Capture Button */}
              <View className="flex-1 items-center flex">
                <Button
                  className="w-24 h-24 p-0 m-0"
                  onPress={takePicture}
                  variant="link"
                  testID="camera-capture-button"
                >
                  <CircleIcon size={96} strokeWidth={1.5} color="white" />
                </Button>
              </View>
              <View className="flex-1" />
            </View>
...
