appId: com.memento.app
---
- assertVisible: Mementos
- tapOn:
    id: mementos-filter-button
- assertVisible: Filter Mementos

# set image label
- tapOn:
    id: filter-sheet-image-label
- tapOn: ${LABEL}

- tapOn:
    id: filter-sheet-submit-button
